# mpytools

./: .gitignore  README.md  pyproject.toml  setup.py
mpytools/: __init__.py  array.py  catalog.py  core.py  io.py  mpi.py  random.py  utils.py
mpytools/tests/: test_array.py  test_catalog.py  test_core.py  test_random.py
nb/: basic_examples.ipynb
